Carousel Cropping Fix
Carousel now maintains 16:9 aspect ratio (capping height at 90vh still ofc)

--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -55,10 +55,16 @@ body
 }
 
 /*Carousel Modifications*/
+.carousel-inner
+{
+    max-height: 90vh;
+    height: 56.25vw;
+    width: 100vw;
+}
+
 .carousel-inner > .carousel-item
 {
-    width: 100%;
-    max-height: 90vh;
+    
     overflow: hidden;
 }
 
